src/test/ui/lifetimes/undeclared-lifetime-used-in-debug-macro-issue-70152.stderr
error[E0261]: use of undeclared lifetime name `'b`
  --> $DIR/undeclared-lifetime-used-in-debug-macro-issue-70152.rs:3:9
   |
LL | struct Test {
   |            - help: consider introducing lifetime `'b` here: `<'b>`
LL |     a: &'b str,
   |         ^^ undeclared lifetime
   |
   = help: if you want to experiment with in-band lifetime bindings, add `#![feature(in_band_lifetimes)]` to the crate attributes

error[E0261]: use of undeclared lifetime name `'b`
  --> $DIR/undeclared-lifetime-used-in-debug-macro-issue-70152.rs:3:9
   |
LL | struct Test {
   |            - help: consider introducing lifetime `'b` here: `<'b>`
LL |     a: &'b str,
   |         ^^ undeclared lifetime
   |
   = help: if you want to experiment with in-band lifetime bindings, add `#![feature(in_band_lifetimes)]` to the crate attributes

error[E0261]: use of undeclared lifetime name `'b`
  --> $DIR/undeclared-lifetime-used-in-debug-macro-issue-70152.rs:13:13
   |
LL |     fn foo(&'b self) {}
   |             ^^ undeclared lifetime
   |
   = help: if you want to experiment with in-band lifetime bindings, add `#![feature(in_band_lifetimes)]` to the crate attributes
help: consider introducing lifetime `'b` here
   |
LL | impl<'b> T for Test {
   |     ++++
help: consider introducing lifetime `'b` here
   |
LL |     fn foo<'b>(&'b self) {}
   |           ++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0261`.
